--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="https://accounts.google.com/ServiceLogin/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%26ogbl%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
         target="blank">Gmail</a>
       <a href="https://www.google.com.tr/imghp?hl=tr&ogbl" target="blank">Images</a>
-      <a href="https://about.google/intl/en/products/" target="blank"><img src="./images/icon-menu.jpg" alt="icon menu"
+      <a href="https://about.google/intl/en/products/" target="blank"><img src="images/icon-menu.jpg" alt="icon menu"
           class="icon-menu" /></a>
       <button class="sign-in-btn">Sign In</button>
     </div>
