--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="search-area">
         <input type="text" name="search area" class="search" autofocus>
         <i class="fas fa-search" id="search-icon"></i>
-        <a href="#"><img src="images/google_microphone.png" alt="microphone" class="microphone"></a>
+        <a href="#"><img src="./images/google_microphone.png" alt="microphone" class="microphone"></a>
       </div>
       <div class="bottom-box">
         <button>Google Search</button>
