--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   <section>
     <div class="container">
       <div class="logo">
-
         <img src="images/googlelogo.png" alt="google_logo" />
-
-
       </div>
+
+
       <div class="search-area">
-        <input type="text" name="search area" class="search" autofocus>
-        <i class="fas fa-search" id="search-icon"></i>
-        <a href="#"><img src="images/google_microphone.png" alt="microphone" class="microphone"></a>
+        <input type="search" placeholder="Search" class="search" autofocus>
+        <i class="fas fa-search mag"></i>
+        <i class="fas fa-microphone mic"></i>
       </div>
+
       <div class="bottom-box">
         <button>Google Search</button>
         <button>I'm Feeling Lucky</button>
